2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* config/s390/sysdepCallMethod.h: Added missing semicolon.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Use a single AC_CHECK_HEADERS macro
	to reduce the bloat in the configure script.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javac.in,
	kaffe/scripts/javakey.in,
	kaffe/scripts/jdb.in,
	kaffe/scripts/kjc.in,
	kaffe/scripts/kopi.in:
	Removed unused scripts or scripts using sun.* classes.

	* kaffe/scripts/Makefile.am,
 	configure.ac: Removed the deleted files.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

        * configure.ac: Added PTHREAD_CFLAGS to CFLAGS back. 
	That fixes FreeBSD again. 'make CFLAGS=-Wall' still works now,
	though.

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_LDFLAGS):
	Added PTHREAD_CFLAGS.

	* kaffe/kaffevm/systems/unix-pthreads/Makefile.am (libkthread_la_LDFLAGS):
	Added PTHREAD_CFLAGS.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2005-02-08  Jim Huang  <jserv@kaffe.org>

	* WHATSNEW: Add some successes.
	
	* FAQ/FAQ.awt: Add entry to Nano-X AWT backend.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Updated.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	Fixed make distcheck. Removed remaining jar files from tarball.

	N.B. We should ship kaffe-1.1.5-rt.jar separately for people that
	can't build it on their boxes (ps2linux). Not shipping the 
	prebuilt jar files reduces the size of the tarball by about 
	7M, down to 9M.

	* Makefile.am (dist-hook): Removed support for precompiled rt.jar.
	
	* configure.ac: Adapted accordingly.

	* libraries/javalib/awt-implementations/kaffe/Makefile.am,
	libraries/javalib/gmp-math/Makefile.am (EXTRA_DIST): Don't
	put the compiled JAR file into the distribution tarball.
	(clean-local): Remove compiled classes and JAR files.

	* test/internal/Makefile.am,
	test/regression/Makefile.am,